Updted index.html content

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         <section class="main-content">
             <section class="banner" id="content0">
                 <img src="images/banner.jpg" class="entire-width"/>
+                
+         <h3 class="ticker">$12,500 raised so far. $17,500 remaining to  our goal. </h3>
+                
             </section>
             <section class="home pannel" id="content1">
                 <h2><span class="no-bg">About Us</span></h2>
