--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-﻿
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Nantucket Education Trust</title>
+    <meta name="description" content="Nantucket Education Trust">
+    <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1.0, maximum-scale=3.0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes">﻿
     <link href="stylesheets/main_style.css" rel="stylesheet" />
     <style>
-
         /*override defaults */
 
         .main-header {
