Paypal-Donation Button added, :hover effect changed, h3.ticker font bold

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <section class="banner" id="content0">
                 <img src="images/banner.jpg" class="entire-width"/>
                 
-         <h3 class="ticker">$12,500 raised so far. $17,500 remaining to  our goal. </h3>
+         <h3 class="ticker">$12,500 raised so far. $17,500 remaining to  our goal. <a href="#"><img src="images/paypal-donate.png" alt="Donate with PayPal"> </a></h3>
                 
             </section>
             <section class="home pannel" id="content1">
