remove class from headers

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ---
 layout: default
+published: true
 ---
+
 {% include banner.html %}
 {% for post in site.posts %}
 <section class="{{ post.class }} {{ post.secondClass }}" id="{{ post.identification }}">
-    <h2><span class="{{ post.thirdClass }}">{{ post.title }}</span></h2>
+    <h2><span>{{ post.title }}</span></h2>
     {{ post.content }}
 </section>
 {% endfor %}
