--- a/_posts/2015-10-06-Banner-Slider.html
+++ b/_posts/2015-10-06-Banner-Slider.html
@@ -1,14 +1,16 @@
 ---
 layout: post
-title: 
+title: null
 class: banner
 identification: content0
 published: true
-carousel:
+carousel: 
   - image: /images/slider/slide1.jpg
   - image: /images/slider/slide2.jpg
   - image: /images/slider/slide3.jpg
+  - image: "/images/slider/TNP-size-info.jpg"
 ---
+
 
 		{% if page.carousel %}
 			<div class="flexslider entire-width">
