--- a/thank-you.html
+++ b/thank-you.html
@@ -33,7 +33,7 @@
      <p class="thank-you">
       
       
-	<!-- add more content if you wish above this line -->  
+	<!-- add more content if you wish above this lines -->  
  
   
    </p>
